<resources>
    <string name="app_name">Практическая работа 12</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_new_account">Create A New Account ?</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="drive_distance">Drive</string>
    <string name="paid_total">Paid</string>
    <string name="minute_short">min</string>
    <string name="hours">hours</string>
    <string name="email">E-mail:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="exit">Exit</string>
    <string name="menu">Menu</string>
    <string name="profile_picture">Profile picture</string>
    <string name="example_login">Ivanov.I</string>
    <string name="example_user_name">Ivanov Ivan</string>
    <string name="example_email">ivanov@gmail.com</string>
    <string name="example_car_name">Kia Rio</string>
    <string name="example_city">Rostov</string>
    <string name="example_15_hours">15 hours</string>
    <string name="example_15_min">15 min</string>
    <string name="example_10_min">10 min</string>
    <string name="example_60_min">60 min</string>
    <string name="example_1510_dollars">$1510</string>
    <string name="example_15_dollars">$15</string>
    <string name="example_10_dollars">$10</string>
    <string name="example_50_dollars">$50</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fill_all_fields">Please, fill in all fields</string>
    <string name="password_do_not_match">Passwords don\'t match</string>
    <string name="book">Book</string>
    <string name="price">Price:</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="thank_you">Thank you!</string>
    <string name="wait_timer">Wait timer</string>
    <string name="drive_timer">Drive timer</string>
    <string name="example_1_5_kilometers">1.5 km</string>
    <string name="example_5_min_free">5 min - free</string>
    <string name="example_1_min_1dollar">1 min - $1</string>
    <string name="example_60_min_50dollar">60 min - $50</string>
    <string name="example_1440_min_300dollar">1440 min - $300</string>
    <string name="time">00:00:00</string>
</resources>