<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/background_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:srcCompat="@drawable/carblurred"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/settings_gradient_drawable"
            app:layout_constraintBottom_toBottomOf="@id/background_image"
            app:layout_constraintEnd_toEndOf="@id/background_image"
            app:layout_constraintStart_toStartOf="@id/background_image"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/background_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.475" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_user_name"
            android:textAppearance="@style/Theme.Practice12.Settings.Name"
            app:layout_constraintBottom_toBottomOf="@id/background_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/background_image"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:id="@+id/money_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/example_1510_dollars"
            android:textAppearance="@style/Theme.Practice12.Settings.Stat"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintStart_toEndOf="@+id/time_count"
            app:layout_constraintTop_toBottomOf="@+id/background_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drive_distance"
            android:textAppearance="@style/Theme.Practice12.Settings.StatName"
            app:layout_constraintEnd_toEndOf="@+id/money_count"
            app:layout_constraintStart_toStartOf="@+id/money_count"
            app:layout_constraintTop_toBottomOf="@+id/money_count" />

        <TextView
            android:id="@+id/time_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/example_15_hours"
            android:textAppearance="@style/Theme.Practice12.Settings.Stat"
            app:layout_constraintEnd_toStartOf="@id/money_count"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/background_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid_total"
            android:textAppearance="@style/Theme.Practice12.Settings.StatName"
            app:layout_constraintEnd_toEndOf="@+id/time_count"
            app:layout_constraintStart_toStartOf="@+id/time_count"
            app:layout_constraintTop_toBottomOf="@+id/time_count" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/Theme.Practice12.Settings.Email"
            app:layout_constraintEnd_toStartOf="@+id/email"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/email"
            app:layout_constraintBottom_toBottomOf="@id/email"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:layout_marginStart="4dp"
            android:text="@string/example_email"
            android:textAppearance="@style/Theme.Practice12.Settings.Email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/background_image" />
        <TextView
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textAppearance="@style/Theme.Practice12.Settings.TextButton"
            android:layout_marginTop="1dp"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="@id/email"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Theme.Practice12.Toolbar.Style"
            android:theme="@style/Theme.Practice12.Toolbar.Theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <include layout="@layout/drawer"/>
</androidx.drawerlayout.widget.DrawerLayout>