<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingStart="24dp"
                android:paddingEnd="40dp">
                <TextView
                    android:id="@+id/carName_1"
                    android:textAppearance="@style/Theme.Practice12.History.ItemText"
                    android:text="@string/example_car_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/time_1"
                    app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                    android:id="@+id/time_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_15_min"
                    android:textAppearance="@style/Theme.Practice12.Settings.Email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/carName_1" />
                <TextView
                    android:id="@+id/price_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_15_dollars"
                    android:textAppearance="@style/Theme.Practice12.Settings.Email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/history_divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingStart="24dp"
                android:paddingEnd="40dp">
                <TextView
                    android:id="@+id/carName_2"
                    android:textAppearance="@style/Theme.Practice12.History.ItemText"
                    android:text="@string/example_car_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/time_2"
                    app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                    android:id="@+id/time_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_10_min"
                    android:textAppearance="@style/Theme.Practice12.Settings.Email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/carName_2" />
                <TextView
                    android:id="@+id/price_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_10_dollars"
                    android:textAppearance="@style/Theme.Practice12.Settings.Email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/history_divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingStart="24dp"
                android:paddingEnd="40dp">
                <TextView
                    android:id="@+id/carName_3"
                    android:textAppearance="@style/Theme.Practice12.History.ItemText"
                    android:text="@string/example_car_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/time_3"
                    app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                    android:id="@+id/time_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_60_min"
                    android:textAppearance="@style/Theme.Practice12.Settings.Email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/carName_3" />
                <TextView
                    android:id="@+id/price_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_50_dollars"
                    android:textAppearance="@style/Theme.Practice12.Settings.Email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/history_divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
        </ScrollView>
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Theme.Practice12.Toolbar.Style"
            android:theme="@style/Theme.Practice12.Toolbar.Theme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include layout="@layout/drawer"/>
</androidx.drawerlayout.widget.DrawerLayout>